# hsrace

./: .gitignore  README.md  collisionproblem  hsrace2.cabal  hsrace2.prof  keybindings.cfg  oldtrack  run  stack.yaml  todo  track
docs/: track_connection_construction.ggb
gloss/gloss/: gloss.cabal
gloss/gloss-rendering/: gloss-rendering.cabal
gloss/gloss/Graphics/Gloss/Interface/IO/: Game.hs
gloss/gloss/Graphics/Gloss/Internals/Interface/: Animate.hs  Display.hs  Game.hs  Interact.hs  Simulate.hs
gloss/gloss/Graphics/Gloss/Internals/Interface/Backend/: GLFW.hs  GLUT.hs  Types.hs
gloss/gloss/Graphics/Gloss/Internals/Interface/Simulate/: Idle.hs
src/: .#Grid.hs  Angle.hs  Bin.hs  Client.hs  Editor.hs  Game.hs  Grid.hs  Input.hs  InputState.hs  KeyMap.hs  Main.hs  Overlay.hs  Polar.hs  RenderTrack.hs  SF.hs  Server.hs  State.hs  Track.hs  Types.hs  Util.hs  Vec.hs  VectorSpace.hs  Waypoints.hs
src/Editor/: Cache.hs  GUI.hs  Lap.hs  LayoutState.hs  Nodes.hs  Overlay.hs  Pillar.hs  Render.hs  State.hs  TrackState.hs  Waypoint.hs
src/Game/: Lap.hs  Render.hs  Types.hs
src/Game/Render/: Voronoi.hs
src/Network/: EventMsg.hs  Packet.hs  SerializedSize.hs  Setup.hs  State.hs  UpdateMsg.hs
src/Server/: Communication.hs  Input.hs  Lobby.hs  Player.hs  Server.hs  Shell.hs
src/Track/: Bezier.hs  CheckPoints.hs  CollisionGrid.hs  Lap.hs  Polygon.hs  Render.hs  Road.hs  Types.hs
tracks/: bar  foo
