name:                hsrace2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hsrace2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hsrace2
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Track,
                       Track.Road,
                       Track.Polygon,
                       Track.CollisionGrid,
                       Track.CheckPoints,
                       Track.Render,
                       Track.Bezier,
                       Track.Types,
                       Vec,
                       Angle,
                       Editor,
                       Editor.TrackState,
                       Editor.Render,
                       Editor.GUI,
                       Editor.Waypoint,
                       Editor.Pillar,
                       Editor.Cache,
                       Editor.Nodes,
                       Editor.Lap,
                       Input,
                       Overlay,
                       Game,
                       Game.Lap,
                       Game.Render,
                       Game.Types,
                       Util,
                       SF,
                       Grid,
                       Types,
                       Server,
                       Client,
                       Network.UpdateMsg,
                       Network.SerializedSize
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  extensions:          FlexibleInstances,
                       FlexibleContexts,
                       MultiParamTypeClasses,
                       TemplateHaskell,
                       FunctionalDependencies,
                       DeriveGeneric,
                       DeriveFunctor,
                       DeriveFoldable,
                       TupleSections,
                       LambdaCase,
                       Arrows,
                       TypeOperators
                       ScopedTypeVariables,
                       PatternSynonyms,
                       GADTs,
                       DerivingVia,
                       DerivingStrategies,
                       TypeFamilies
  ghc-options:         -threaded -O2 -rtsopts "-with-rtsopts=--nonmoving-gc -sgc.profile"
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       ConfigFile,
                       lens,
                       vector,
                       containers,
                       array,
                       random,
                       cereal,
                       bytestring
